--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Finance Tracker App</h1>
 <p>This is the first page of the finance app, to show that it's all OK.</p>
+
+<%= link_to 'Log out', destroy_user_session_path, method: :delete %>
