--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,16 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require_bootstrap
  *= require_tree .
  *= require_self
  */
-
-
- /* Very temporary stuff */
-
- @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-
- body {
-  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif
- }
