--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Finance Tracker App</h1>
-<p>This is the first page of the finance app, to show that it's all OK.</p>
+<p>Welcome to the Finance Tracker App 2020.</p>
 
 <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
