Create and style top level partials

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap';
 
 .navbar {
-  background-color: #f9b8a4 !important;
+  background-color: #cad5fc !important;
 }
 
 h1 {
