--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -1,2 +1,24 @@
-<h1>Users#my_portfolio</h1>
-<p>Find me in app/views/users/my_portfolio.html.erb</p>
+<h1>My portfolio</h1>
+
+<div class="search-area">
+  <h3>Search stocks</h3>
+
+  <%= form_tag '#', method: :get do %>
+    <div class="form-group row">
+      <div class="col-sm-9 no-right-padding">
+        <%= text_field_tag :stock,
+            params[:stock],
+            placeholder: 'Stock ticker symbol',
+            autfocus: true,
+            class: 'form-control form-control-lg'
+        %>
+      </div>
+      <div class="col-sm-3 no-left-padding">
+        <%= button_tag type: :submit, class: 'btn btn-success' do %>
+          <%= fa_icon 'search' %> Search
+        <% end %>
+      </div>
+    </div>
+
+  <% end %>
+</div>
