--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,10 +12,6 @@ h1 {
   padding-top: 50px;
 }
 
-.no-right-padding {
-  padding-right: 0 !important;
-}
-
-.no-left-padding {
-  padding-left: 0 !important;
+.results-block {
+  display: inline-block;
 }
