--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -3,9 +3,9 @@
 <div class="search-area">
   <h3>Search stocks</h3>
 
-  <%= form_tag '#', method: :get do %>
+  <%= form_tag search_stock_path, method: :get do %>
     <div class="form-group row">
-      <div class="col-sm-9 no-right-padding">
+      <div class="col-sm-9">
         <%= text_field_tag :stock,
             params[:stock],
             placeholder: 'Stock ticker symbol',
@@ -13,7 +13,7 @@
             class: 'form-control form-control-lg'
         %>
       </div>
-      <div class="col-sm-3 no-left-padding">
+      <div class="col-sm-3">
         <%= button_tag type: :submit, class: 'btn btn-success' do %>
           <%= fa_icon 'search' %> Search
         <% end %>
@@ -22,3 +22,11 @@
 
   <% end %>
 </div>
+
+<% if @stock %>
+  <div class="card card-header results-block">
+    <strong>Symbol:</strong> <%= @stock.ticker %>
+    <strong>Name:</strong> <%= @stock.name %>
+    <strong>Price:</strong> <%= @stock.last_price %>
+  </div>
+<% end %>
