Use AJAX for returning the searched stock.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,6 +12,7 @@ h1 {
   padding-top: 50px;
 }
 
-.results-block {
-  display: inline-block;
+.results-block strong {
+    display: inline-block;
+    width: 5rem;
 }
