--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Finance Tracker App</h1>
 <p>Welcome to the Finance Tracker App 2020.</p>
 
+<%= link_to 'My protfolio', my_portfolio_path %><br/>
+
 <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
