--- a/app/views/users/_results.html.erb
+++ b/app/views/users/_results.html.erb
@@ -4,7 +4,7 @@
     <%= render 'layouts/messages' %>
 
     <% if @stock %>
-      <div class="card results-block bg-secondary text-white">
+      <div class="card results-block bg-secondary text-white mb-3">
         <div class="card-header">
           <strong>Symbol:</strong> <%= @stock.ticker %>
         </div>
