--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-10">
-    <table class="table table-bordered table-hover mt-2">
+    <table class="table table-bordered table-hover mb-3">
       <thead>
         <tr>
           <th scope="col">Ticker</th>
