Add stocks to the user portfolio

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,6 +17,18 @@ h1 {
     width: 5rem;
 }
 
+.ticker-column {
+  width: 6rem;
+}
+
+.price-column {
+  width: 7rem;
+}
+
+.actions-column {
+  width: 15rem;
+}
+
 .number-cell {
   padding-right: 1rem;
   text-align: right;
