--- a/app/views/users/_results.html.erb
+++ b/app/views/users/_results.html.erb
@@ -10,7 +10,9 @@
         </div>
         <div class="card-body">
           <strong>Name:</strong> <%= @stock.name %><br />
-          <strong>Price:</strong> <%= @stock.last_price %>
+          <strong>Price:</strong> <%= @stock.last_price %></br />
+          <%= link_to 'Add to portfolio', user_stocks_path(ticker: @stock.ticker),
+                      method: :post, class: 'btn btn-xs btn-success mt-2'%>
         </div>
       </div>
     <% end %>
