--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -3,16 +3,16 @@
     <table class="table table-bordered table-hover mb-3">
       <thead>
         <tr>
-          <th scope="col">Ticker</th>
+          <th class="ticker-column" scope="col">Ticker</th>
           <th scope="col">Name</th>
-          <th scope="col">Last price</th>
-          <th scope="col">Actions</th>
+          <th class="price-column"scope="col">Last price</th>
+          <th class="actions-column" scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
       <% @tracked_stocks.each do |stock| %>
         <tr>
-          <th scope="row"><%= stock.ticker %></th>
+          <td scope="row"><%= stock.ticker %></td>
           <td><%= stock.name %></td>
           <td class="number-cell"><%= stock.last_price %></td>
           <td>Delete</td>
