--- a/app/views/users/_results.html.erb
+++ b/app/views/users/_results.html.erb
@@ -6,13 +6,26 @@
     <% if @stock %>
       <div class="card results-block bg-secondary text-white mb-3">
         <div class="card-header">
-          <strong>Symbol:</strong> <%= @stock.ticker %>
+          <strong>Symbol:</strong> <%= @stock.ticker.upcase %>
         </div>
         <div class="card-body">
           <strong>Name:</strong> <%= @stock.name %><br />
-          <strong>Price:</strong> <%= @stock.last_price %></br />
-          <%= link_to 'Add to portfolio', user_stocks_path(ticker: @stock.ticker),
-                      method: :post, class: 'btn btn-xs btn-success mt-2'%>
+          <strong>Price:</strong> <%= @stock.last_price %><br />
+          <% if current_user.can_track_stock(@stock.ticker) %>
+            <%= link_to 'Add to portfolio', user_stocks_path(ticker: @stock.ticker),
+                        method: :post, class: 'btn btn-xs btn-info mt-2'%>
+          <% else %>
+            <h4 class="mt-2">
+              <span class="badge badge-info">
+                You are already tracking
+                <% if current_user.stock_already_tracked?(@stock.ticker) %>
+                  <%= @stock.name %>
+                <% else %>
+                  10 stocks
+                <% end %>
+              </span>
+            </h4>
+          <% end %>
         </div>
       </div>
     <% end %>
