Add portfoliio stock removal.
Make all buttons small.

--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -12,10 +12,13 @@
       <tbody>
       <% @tracked_stocks.each do |stock| %>
         <tr>
-          <td scope="row"><%= stock.ticker %></td>
+          <td><%= stock.ticker %></td>
           <td><%= stock.name %></td>
           <td class="number-cell"><%= stock.last_price %></td>
-          <td>Delete</td>
+          <td>
+            <%= link_to 'Remove', user_stock_path(stock), method: :delete, data:
+                  { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-warning'%>
+          </td>
         </tr>
       <% end %>
       </tbody>
