--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,12 +18,12 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <%= link_to 'Log out', destroy_user_session_path,
-                        method: :delete, class: 'btn btn-xs btn-outline-danger mr-2' %>
+                        method: :delete, class: 'btn btn-sm btn-outline-danger mr-2' %>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-sm btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     <% end %>
