--- a/app/views/users/_results.html.erb
+++ b/app/views/users/_results.html.erb
@@ -13,7 +13,7 @@
           <strong>Price:</strong> <%= @stock.last_price %><br />
           <% if current_user.can_track_stock(@stock.ticker) %>
             <%= link_to 'Add to portfolio', user_stocks_path(ticker: @stock.ticker),
-                        method: :post, class: 'btn btn-xs btn-info mt-2'%>
+                        method: :post, class: 'btn btn-sm btn-info mt-2'%>
           <% else %>
             <h4 class="mt-2">
               <span class="badge badge-info">
