--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,25 @@
-<h1><%= t('.sign_up') %></h1>
+<h1 class="text-center"><%= t('.sign_up') %></h1>
 
-<div class="row">
+<div class="row justify-content-center">
   <div class="col-9">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= bootstrap_devise_error_messages! %>
 
       <div class="form-group">
-        <%= f.label :email %>
+        <%= f.label 'Email address' %>
         <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, autocomplete: 'first name', class: 'form-control' %>
+        </div>
+
+        <div class="form-group col-md-6">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, autocomplete: 'last name', class: 'form-control' %>
+        </div>
       </div>
 
       <div class="form-group">
