--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,11 +11,25 @@
           <li class="nav-item <%= 'active' if request.path == my_portfolio_path %>">
             <%= link_to 'My portfolio', my_portfolio_path, class: 'nav-link' %>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Profile
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to edit_user_registration_path, class: 'dropdown-item' do %>
+                 <%= fa_icon 'edit' %> Edit your profile
+              <% end %>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item user-name">
+            <%= fa_icon 'user' %> <%= current_user.full_name %>
+          </li>
           <li class="nav-item">
             <%= link_to 'Log out', destroy_user_session_path,
                         method: :delete, class: 'btn btn-sm btn-outline-danger mr-2' %>
