--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Finance Tracker App</h1>
+<h1 class="text-center">Finance Tracker App</h1>
 <p>Welcome to the Finance Tracker App 2020.</p>
 
 <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
