Add friendships and listing page

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,6 +12,10 @@
             <%= link_to 'My portfolio', my_portfolio_path, class: 'nav-link' %>
           </li>
 
+          <li class="nav-item <%= 'active' if request.path == my_friends_path %>">
+            <%= link_to 'My friends', my_friends_path, class: 'nav-link' %>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Profile
