Add email address to friends list.
Update README.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -29,6 +29,10 @@ h1 {
   width: 10rem;
 }
 
+.email-column {
+  width: 6rem;    /* aka as small as possible */
+}
+
 .number-cell {
   padding-right: 1rem;
   text-align: right;
