Search for and display users

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,6 +17,11 @@ h1 {
     width: 5rem;
 }
 
+.friends-results-block strong {
+  display: inline-block;
+  width: 9rem;
+}
+
 .ticker-column {
   width: 6rem;
 }
