--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -1,5 +1,5 @@
-<div class="row justify-content-center">
-  <div class="col-9">
+<div class="row">
+  <div class="col-10">
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
