--- a/app/views/users/_result.js.erb
+++ b/app/views/users/_result.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('results').innerHTML = '<%= j render "users/results.html" %>';
+document.getElementById('results').innerHTML = '<%= j render "stocks/results.html" %>';
