--- a/app/views/users/_friends.html.erb
+++ b/app/views/users/_friends.html.erb
@@ -6,8 +6,18 @@
       <% @users.each do |user| %>
         <div class="card friends-results-block bg-secondary text-white mb-3">
           <div class="card-body">
+            <strong>Name:</strong> <%= user.full_name %><br />
             <strong>Email address:</strong> <%= user.email %><br />
-            <strong>Name:</strong> <%= user.full_name %>
+            <div class="friend-actions">
+              <%= link_to 'View profile', '#', class: 'btn btn-sm btn-info mr-2' %>
+              <% if current_user.friends_with? user.id %>
+                <span class="badge badge-info text-wrap" style="width: 10rem">
+                You are already friends with <%= user.first_name %>
+                </span>
+              <% else %>
+                <%= link_to 'Follow', friendships_path(user: user), method: :post, class: 'btn btn-sm btn-info' %>
+              <% end %>
+            </div>
           </div>
         </div>
       <% end %>
