Complete Finance App

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -40,9 +40,12 @@ div.friend-actions {
   width: 10rem;
 }
 
+.friend-actions-column {
+  width: 15rem;
+}
+
 .email-column {
   width: 6rem;    /* aka as small as possible */
-  hyphens: none;
 }
 
 .number-cell {
