--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -15,10 +15,19 @@
           <td><%= stock.ticker %></td>
           <td><%= stock.name %></td>
           <td class="number-cell"><%= stock.last_price %></td>
-          <td>
-            <%= link_to 'Remove', user_stock_path(stock), method: :delete, data:
-                  { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-warning'%>
-          </td>
+            <td>
+              <% if current_user.id == @user.id %>
+                <%= link_to 'Remove', user_stock_path(stock), method: :delete, data:
+                      { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-warning'%>
+              <% elsif current_user.can_track_stock? stock.ticker %>
+                <%= link_to 'Add to portfolio', user_stocks_path(ticker: stock.ticker),
+                            method: :post, class: 'btn btn-sm btn-info'%>
+              <% elsif current_user.stock_already_tracked? stock.ticker %>
+                <span class="badge badge-info">
+                  You are already tracking <%= stock.ticker %>
+                </span>
+              <% end %>
+            </td>
         </tr>
       <% end %>
       </tbody>
