--- a/app/views/stocks/_results.html.erb
+++ b/app/views/stocks/_results.html.erb
@@ -10,14 +10,14 @@
         <div class="card-body">
           <strong>Name:</strong> <%= @stock.name %><br />
           <strong>Price:</strong> <%= @stock.last_price %><br />
-          <% if current_user.can_track_stock(@stock.ticker) %>
+          <% if current_user.can_track_stock? @stock.ticker %>
             <%= link_to 'Add to portfolio', user_stocks_path(ticker: @stock.ticker),
                         method: :post, class: 'btn btn-sm btn-info mt-2'%>
           <% else %>
             <h4 class="mt-2">
               <span class="badge badge-info">
                 You are already tracking
-                <% if current_user.stock_already_tracked?(@stock.ticker) %>
+                <% if current_user.stock_already_tracked? @stock.ticker %>
                   <%= @stock.name %>
                 <% else %>
                   10 stocks
